# ATLAS

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/: architecture_diagram.md  dependency_matrix.json  implementation_plan.md  repo_analysis.json  system.md
.github/workflows/: python-app.yml
atlas/: __init__.py  capabilities.py  cli.py  gui_app.py  models.py
atlas/core/: __init__.py  ai_brain.py  config.py  intent_parser.py  logging.py  orchestrator.py  safety.py
atlas/gui/: __init__.py  controller.py  main_window.py
atlas/modules/: __init__.py  audio_processor.py  coding_assistant.py  desktop_manager.py  productivity.py  system_control.py  voice_engine.py  web_media.py
docs/: ATLAS_MILESTONE_1.md  ATLAS_MILESTONE_2.md  ATLAS_MILESTONE_3.md  ATLAS_MILESTONE_4.md  ATLAS_MILESTONE_5.md  ATLAS_MILESTONE_6.md  ATLAS_MILESTONE_7.md  ATLAS_MILESTONE_8.md  ATLAS_MILESTONE_9.md
tests/: test_ai_brain.py  test_config_and_safety.py  test_gui_controller.py  test_intent_parser.py  test_milestone_3_routing.py  test_orchestrator.py  test_productivity_coding.py  test_system_control.py  test_voice_io.py  test_web_integrations.py
